# mlops_mini_project

./: .gitignore  Makefile  README.md  dvc.yaml  mlflow.db  notes  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
docs/: mkdocs.yml
docs/docs/: index.md
flask_app/: app.py
flask_app/templates/: index.html
mlruns/1/736668bd404547abb20b90b8b98a8008/artifacts/: experiment_info.json
mlruns/1/models/m-63d2dd56d9a64db6a91cc91223df30ef/artifacts/: MLmodel  conda.yaml  model.skops
models/: vectorizer.pkl
notebooks/: exp1_baseline_model.ipynb  exp1_bow_vs_tfidf.py  exp3_lor_bow_hp.py
src/: dataset.py  features.py  plots.py  temp.py
src/modeling/: model_evaluation.py  predict.py  register_model.py  train.py
